--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <title>simple crystal game</title>
   <!-- Added link to the jQuery Library -->
-  <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <!--  <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script> -->
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+
+  <script src="assets/javascript/games.js" type="text/javascript"></script>
 
   <!-- Added a link to Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
@@ -12,7 +16,6 @@
 
   <!-- Our own CSS stylesheet -->
   <link rel="stylesheet" href="assets/css/style.css" media="screen">
-
 </head>
 
 <body>
@@ -71,7 +74,6 @@
 
   </main>
 
-<script src="assets/javascript/games.js" type="text/javascript"></script>
 
 </body>
 
